# copyyy.it

./: .gitignore  Docker-compose.yml  Dockerfile  Makefile  alembic.ini  pyproject.toml  settings.py  test_main.http
alembic/: env.py
alembic/versions/: 3b028b205a91_your_message.py  3c487e369191_add_column.py
api/: app.py
db/: crud.py  database.py  models.py  schemas.py
lib/: utils.py
worker/: app.py  core.py
